web/css/fc_styles.css
/* ... */
.facility-field-summary thead tr td, .facility-field-summary tr td {
	font-size: 13px;
}

.facility-field-summary tr td {
	border-right: 1px solid #ccc;
	border-left: 1px solid #ccc;
}
.row-padding {
	padding: 15px 15px 5px 15px;
}

.products-table {
	margin:0 auto;
}
form#flowFormID h3.panel-header {
	font-weight: bold;
}
.document-upload h3.panel-header {
	font-weight: bold;
}
form#flowFormID #fsg-core label {
	margin-top: 6px;
}
form#flowFormID #fsg-main label {
	margin-top: 6px;
}
form#flowFormID #fsgw-other label {
	margin-top: 6px;
}
form#flowFormID #l_row_type,#l_row_sport label {
	margin-top: 0px;
}
.paddingsummary {
	float: left;
    width: 95px;
}
#flowFormID .col-md-9 .nav-tabs li a {
    font-size: 13px;
}
#flowFormID .col-md-9 .nav-tabs {
    width: 870px;
}

a.btn-main.btn-view-replace {
	padding:5px 10px 5px 10px;
	width:100%;
}

a.HTdisabled, a.HTdisabled:hover {
	background: #ccc;
}


.button-row ul.row-btn-complete {
	list-style: none;
	margin:0;
	padding:0;
	display:table;
}

.button-row ul.row-btn-complete li {
	float:left;
	display: table-cell;
	/*padding-right:25px;*/
	padding-right:72px;
}

.button-row ul.row-btn-complete li:last-child {
	padding-right:0px;
}

.button-row ul.row-btn-complete li a {
	display:block;
	width:227px;
	height:60px;
	padding:12px 3px 15px 3px;
}

.button-row ul.row-btn-complete li:nth-child(1) a, .button-row ul.row-btn-complete li:nth-child(3) a {
	padding-top:20px;
}

/*summary screen labels width*/

.document-upload.summary .personal-information .details-left {
	width:40%;
}

.document-upload.summary .contact-details .details-left {
	width:35%;
}

.document-upload.summary .registration-details .details-left {
	width:30%;
}

.toppadding {
	margin-top: 38px;
}
.toppadding .panel-header {
	padding: 11px 20px;
}
.toppadding .sidebar-box ul {
    padding: 0 0 10px;
}
.toppadding .sidebar-box ul:last-of-type {
    padding: 0 0 0px;
}
.steps .alert {
	margin-left: -11px;
	margin-bottom: 0px;
	margin-top: 20px;
}

#content .error-alerts {
	margin-left:10px;
	margin-right:10px;
	padding-left:4px;
}
header nav ul li a.selected {
	background-color: #e3e3e3;
	color: #000;
}
#personRequestForm input[name="search_keyword"] {
	width: 100%;
}
#personRequestForm .col-md-6 .col-md-8 {
	padding: 0px;
}
#personRequestForm .col-md-6 .col-md-8 .error {
	font-size: .9em;
	float: left;
}
#personRequestForm .col-md-6 .col-md-4 {
	padding: 0px;
}
.read-only .mfloat {
	float: left; 
	width: 100%;
}
#toggleGd_intTaskType {
	text-align: center;
}
.col-md-6 #transfer_type_option a {
	width: 50%;
}
#grid_wrapper #grid {
	width: 100%!important;
}

#flowFormID .form-group .col-md-6 .toggle-type {
	float: left;
	width: 100%;
}

.showrecoptions form #doclisttype {
	padding: 9px;
    width: 67%;
}

.list-inline {
	margin-left:-9px;
}

.sevenStepWidth {
	width:164px;
}

.eightStepWidth {
	width:141px;
}

.sixStepWidth {
	width:185px;
}

.playermenu li {
	display:table-cell;
	/*width:155px;*/
}

.playermenu li .current, .playermenu li .next, .playermenu li .previous {
	padding:0;
}

.playermenu li.current {
	padding:11px 16px 10px 25px;
	background: #078b3c;
}


.playermenu li .current:after {
	top: 0px;
	left: 100%;
}

.playermenu li:last-child.current .current:after  {
	 display:none;
}


.playermenu li.next {
	padding:11px 20px 10px 25px;
	background: #fff;
}


.playermenu li.previous {
	padding:11px 20px 10px 25px;
	background: #0fa54a;
}

.playermenu li.previous:after, .playermenu li:last-child.current:after {
	content:"\f00c";
	display: inline-block;
	font: normal normal normal normal 14px/1 FontAwesome;
	text-rendering:auto;
	-webkit-font-smoothing: antialiased;
	padding: 3px 3px;
	color:#fff;
	border-radius:40px;
	background-color: green;
	position:absolute;
	left:130px;
	z-index:1;

}

.playermenu li .next:after {
	top: 0;
	left: 100%;
}


.playermenu li .previous:after {
	top: 0;
	left: 100%;
}

.playermenu li:last-child.current:after {
	left:110px;
}

.playermenu li.sixStepWidth.previous:after {
	left:160px;
}

.playermenu li:last-child.sixStepWidth.current:after {
	left:145px;
}

